--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     <div class="tl-icon">
                         <i class="fas fa-certificate"></i>
                     </div>
-                    <h5>TOEIC</h5>
+                    <h5>TOEIC - 885 POINT</h5>
                     <a href="https://drive.google.com/file/d/19YcArLCBNp0MCuOdbNPxc4QJsWSmo6ac/view?usp=drive_link">
                         <p>Click on to see it</p>
                     </a>                 
@@ -197,7 +197,7 @@
                     <div class="tl-icon">
                         <i class="fas fa-certificate"></i>
                     </div>
-                    <h5>IC3</h5>
+                    <h5>IC3 - CHỨNG CHỈ TIN HỌC VĂN PHÒNG</h5>
                     <a href="https://drive.google.com/file/d/1zeFCClfMNEZHU9roDm3dXMLSs-VQ64ry/view?usp=drive_link">
                         <p>Click on to see it</p>
                     </a> 
