--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     <div class="tl-icon">
                         <i class="fas fa-certificate"></i>
                     </div>
-                    <h5>TOEIC - 885 POINT</h5>
+                    <h5>TOEIC - 880 POINT</h5>
                     <a href="https://drive.google.com/file/d/19YcArLCBNp0MCuOdbNPxc4QJsWSmo6ac/view?usp=drive_link">
                         <p>Click on to see it</p>
                     </a>                 
@@ -576,23 +576,34 @@
     </main>
 
     <div class="controls">
-        <div class="control active-btn" data-id="home" >
+        <div class="control active-btn" data-id="home">
             <i class="fas fa-home"></i>
+            <p><strong>Home</strong></p>
         </div>
         <div class="control" data-id="about">
             <i class="fas fa-user"></i>
+            <p><strong>About me</strong></p>
+
         </div>
         <div class="control" data-id="portfolio">
             <i class="fas fa-tasks"></i>
+            <p><strong>Experience</strong></p>
+
         </div>
         <div class="control" data-id="blogs">
             <i class="far fa-newspaper"></i>
+            <p><strong>Project</strong></p>
+
         </div>
         <div class="control" data-id="blogs1">
             <i class="fas fa-briefcase"></i>
+            <p><strong>Education</strong></p>
+
         </div>
         <div class="control" data-id="contact">
             <i class="fas fa-envelope-open"></i>
+            <p><strong>Contact</strong></p>
+
         </div>
     </div>
     <div class="theme-btn">
