--- a/detail/Edu2.html
+++ b/detail/Edu2.html
@@ -40,7 +40,7 @@
     <section id="banner">
       <div class="container">
         <div class="intro">
-            <img src="./img/Edu/edu2/nghien-cuu-khoa-hoc.jpg"/>
+            <img src="./img/Edu/edu2/nghien-cuu-khoa-hoc.png"/>
           <!-- text -->
           <div class="intro--heading">
             <h3><strong>Scientific Research</strong></h3>
@@ -50,7 +50,7 @@
                 </strong>
             </p>
             <div class="banner__socials">
-              <a href="https://drive.google.com/drive/folders/1W5WVMp1wJU8DqFNlc3gliyBfq4M_yrJd?fbclid=IwAR0AU50IhvtbSa1DdvOk7qMOC0KRFFEEk5CG6XEkKLa_WuxiSMSKVlKnRyQ"><i class="fab fa-google-drive"></i></a>
+              <a href="https://drive.google.com/drive/folders/1W5WVMp1wJU8DqFNlc3gliyBfq4M_yrJd?fbclid=IwAR0AU50IhvtbSa1DdvOk7qMOC0KRFFEEk5CG6XEkKLa_WuxiSMSKVlKnRyQ" target="_blank"><i class="fab fa-google-drive"></i></a>
             </div>
           </div> 
         </div>
@@ -72,7 +72,7 @@
         <!-- item 1 -->
         <div class="things__item">
           <!-- img -->
-          <img src="./img/things-item-1.png" alt="illustration of women" />
+          <img src="./img/Edu/edu2/things_1.png" alt="illustration of women" />
           <!-- text -->
           <div class="things__item--heading">
             <h3><strong>Contribution</strong></h3>
@@ -90,7 +90,7 @@
         <!-- item 2 -->
         <div class="things__item">
           <!-- img -->
-          <img src="./img/things-item-2.png" alt="illustration of women" />
+          <img src="./img/Edu/edu2/things_2.png" alt="illustration of women" />
           <!-- text -->
           <div class="things__item--heading">
             <h3><strong>What I learned from this job position</strong></h3>
@@ -176,9 +176,9 @@
                   </div>
               </form>
               <div class="banner__socials1">
-                <a href="mailto:lekha3604@gmail"><i class="far fa-envelope"></i></a>
-                <a href="tel:0797880803"><i class="fas fa-phone"></i></a>
-                <a href="https://linkedin.com/in/quynhtran0308/"><i class="fab fa-linkedin-in"></i></a>
+                <a href="mailto:lekha3604@gmail" target="_blank"><i class="far fa-envelope"></i></a>
+                <a href="tel:0797880803" target="_blank"><i class="fas fa-phone"></i></a>
+                <a href="https://linkedin.com/in/quynhtran0308/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
               </div>
             </div>
           </div> 
