--- a/detail/Exper1.html
+++ b/detail/Exper1.html
@@ -55,9 +55,9 @@
               but also provided a practical platform to put our marketing skills into action.</strong>
             </p>
             <div class="banner__socials">
-              <a href="https://www.facebook.com/profile.php?id=100095485664229"><i class="fab fa-facebook"></i></a>
-              <a href="https://www.tiktok.com/@xanhyen.staycation?is_from_webapp=1&sender_device=pc"><i class="fab fa-tiktok"></i></a>
-              <a href="https://www.instagram.com/xanhyen.staycation?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fab fa-instagram"></i></a>
+              <a href="https://www.facebook.com/profile.php?id=100095485664229" target="_blank"><i class="fab fa-facebook"></i></a>
+              <a href="https://www.tiktok.com/@xanhyen.staycation?is_from_webapp=1&sender_device=pc"  target="_blank"><i class="fab fa-tiktok"></i></a>
+              <a href="https://www.instagram.com/xanhyen.staycation?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
           </div> 
         </div>
@@ -79,7 +79,7 @@
         <!-- item 1 -->
         <div class="things__item">
           <!-- img -->
-          <img src="./img/things-item-1.png" alt="illustration of women" />
+          <img src="./img/Exper/xanh yen/things_1.jpg" alt="illustration of women" />
           <!-- text -->
           <div class="things__item--heading">
             <h3><strong>Contribution</strong></h3>
@@ -97,7 +97,7 @@
         <!-- item 2 -->
         <div class="things__item">
           <!-- img -->
-          <img src="./img/things-item-2.png" alt="illustration of women" />
+          <img src="./img/Exper/xanh yen/things_2.jpg" alt="illustration of women" />
           <!-- text -->
           <div class="things__item--heading">
             <h3><strong>Achievement</strong></h3>
@@ -113,7 +113,7 @@
         <!-- item 3 -->
         <div class="things__item">
           <!-- img -->
-          <img src="./img/things-item-3.png" alt="illustration of computer" />
+          <img src="./img/Exper/xanh yen/things_3.jpg" alt="illustration of computer" />
           <!-- text -->
           <div class="things__item--heading">
             <h3><strong>What I learned from this job position</strong></h3>
@@ -147,37 +147,32 @@
           <img src="./img/work-dec.png" alt="illustration of leaf" />
         </div>
         <!-- heading -->
-        <h2>YOU CAN SEE SOME ARTICLES I HAVE POSTED FOR XANH YEN STAYCATION BELOW:</h2>
+        <h2>YOU CAN SEE SOME ARTICLES I HAVE POSTED FOR XANH YEN STAYCATION BELOW</h2>
         <!-- img -->
         <div class="works__img">
           <div class="works__img--single">
-            <a href="https://vt.tiktok.com/ZSNKTdAjG/">
+            <a href="https://vt.tiktok.com/ZSNKTdAjG/" target="_blank">
               <img src="./img/Exper/xanh yen/Xanh Tươi - hẹn hò sg đi đâu.jpg" alt="bag" />
             </a>
           </div>
           <div class="works__img--single">
-            <a href="https://www.instagram.com/p/C16-yojvZk-">
+            <a href="https://www.instagram.com/p/C16-yojvZk-" target="_blank">
             <img src="./img/Exper/xanh yen/vì sao bạn nên đặt phòng trước.png" alt="plate" />
             </a>
           </div>
           <div class="works__img--single">
-            <a href="https://vt.tiktok.com/ZSNK33epM/">
+            <a href="https://vt.tiktok.com/ZSNK33epM/" target="_blank">
             <img src="./img/Exper/xanh yen/vid gthieu xanh yên.jpg" alt="women" />
             </a>
           </div>
           <div class="works__img--single">
-            <a href="https://vt.tiktok.com/ZSNK3wrSj/">
+            <a href="https://vt.tiktok.com/ZSNK3wrSj/" target="_blank">
             <img src="./img/Exper/xanh yen/Xanh yên - chán hẹn hò xem phim....jpg" alt="piggy bank" />
             </a>
           </div>  
           <div class="works__img--single">
-            <a href="https://www.instagram.com/p/Cz_N_LgKeH_">
+            <a href="https://www.instagram.com/p/Cz_N_LgKeH_" target="_blank">
             <img src="./img/Exper/xanh yen/pre order.jpg" alt="piggy bank" />
-            </a>
-          </div> 
-          <div class="works__img--single">
-            <a href="https://vt.tiktok.com/ZSNEkBEkm/">
-            <img src="./img/Exper/xanh yen/cách check cam ẩn.jpg" alt="piggy bank" />
             </a>
           </div> 
         </div>
@@ -211,9 +206,9 @@
                   </div>
               </form>
               <div class="banner__socials1">
-                <a href="mailto:lekha3604@gmail"><i class="far fa-envelope"></i></a>
-                <a href="tel:0797880803"><i class="fas fa-phone"></i></a>
-                <a href="https://linkedin.com/in/quynhtran0308/"><i class="fab fa-linkedin-in"></i></a>
+                <a href="mailto:lekha3604@gmail" target="_blank"><i class="far fa-envelope"></i></a>
+                <a href="tel:0797880803" target="_blank"><i class="fas fa-phone"></i></a>
+                <a href="https://linkedin.com/in/quynhtran0308/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
               </div>
             </div>
           </div> 
