--- a/detail/Exper3.html
+++ b/detail/Exper3.html
@@ -47,8 +47,8 @@
                 Saigon City Residence is a high-rise serviced apartment building located in the heart of Ho Chi Minh City. The building is a popular destination for both locals and tourists alike, especially Japanese people living and working in Vietnam. </strong>
             </p>
             <div class="banner__socials">
-              <a href="https://www.facebook.com/saigoncityresidence/"><i class="fab fa-facebook"></i></a>
-              <a href="https://saigoncity.com.vn/"><i class="fab fa-edge"></i></a>
+              <a href="https://www.facebook.com/saigoncityresidence/" target="_blank"><i class="fab fa-facebook"></i></a>
+              <a href="https://saigoncity.com.vn/" target="_blank"><i class="fab fa-edge"></i></a>
               <!-- <a href="https://www.instagram.com/ivolunteervietnam?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fab fa-instagram"></i></a> -->
             </div>
           </div> 
@@ -71,7 +71,7 @@
         <!-- item 1 -->
         <div class="things__item">
           <!-- img -->
-          <img src="./img/things-item-1.png" alt="illustration of women" />
+          <img src="./img/Exper/hotel/things_1.jpg" alt="illustration of women" />
           <!-- text -->
           <div class="things__item--heading">
             <h3><strong>Contribution</strong></h3>
@@ -84,7 +84,7 @@
         <!-- item 2 -->
         <div class="things__item">
           <!-- img -->
-          <img src="./img/Exper/hotel/Kênh OTA biết sd khi đi làm.PNG" alt="illustration of women" />
+          <img src="./img/Exper/hotel/things_2.jpg" alt="illustration of women" />
           <!-- text -->
           <div class="things__item--heading">
             <h3><strong>Achievement</strong></h3>
@@ -96,7 +96,7 @@
         <!-- item 3 -->
         <div class="things__item">
           <!-- img -->
-          <img src="./img/Exper/hotel/minh hoạ gt vs kh.PNG" alt="illustration of computer" />
+          <img src="./img/Exper/hotel/things_3.jpg" alt="illustration of computer" />
           <!-- text -->
           <div class="things__item--heading">
             <h3><strong>What I learned from this job position</strong></h3>
@@ -147,9 +147,9 @@
                   </div>
               </form>
               <div class="banner__socials1">
-                <a href="mailto:lekha3604@gmail"><i class="far fa-envelope"></i></a>
-                <a href="tel:0797880803"><i class="fas fa-phone"></i></a>
-                <a href="https://linkedin.com/in/quynhtran0308/"><i class="fab fa-linkedin-in"></i></a>
+                <a href="mailto:lekha3604@gmail" target="_blank"><i class="far fa-envelope"></i></a>
+                <a href="tel:0797880803" target="_blank"><i class="fas fa-phone"></i></a>
+                <a href="https://linkedin.com/in/quynhtran0308/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
               </div>
             </div>
           </div> 
