--- a/detail/Pro1.html
+++ b/detail/Pro1.html
@@ -53,9 +53,9 @@
                 </strong>
             </p>
             <div class="banner__socials">
-              <a href="https://www.facebook.com/groups/createchmarketers/"><i class="fab fa-facebook"></i></a>
-              <a href="https://drive.google.com/file/d/1grWYZVdPcAcuNTMIZa5oTnJj85-uVXU2/view?usp=drive_link"><i class="fab fa-google-drive"></i></a>
-              <a href="https://caodangsaigon.edu.vn/gioi-thieu/tin-tuc-cdsg/cuoc-thi-marketing-createch-marketers-2023"><i class="fab fa-edge"></i></a>
+              <a href="https://www.facebook.com/groups/createchmarketers/" target="_blank"><i class="fab fa-facebook"></i></a>
+              <a href="https://drive.google.com/file/d/1grWYZVdPcAcuNTMIZa5oTnJj85-uVXU2/view?usp=drive_link" target="_blank"><i class="fab fa-google-drive"></i></a>
+              <a href="https://caodangsaigon.edu.vn/gioi-thieu/tin-tuc-cdsg/cuoc-thi-marketing-createch-marketers-2023" target="_blank"><i class="fab fa-edge"></i></a>
             </div>
           </div> 
         </div>
@@ -180,9 +180,9 @@
                   </div>
               </form>
               <div class="banner__socials1">
-                <a href="mailto:lekha3604@gmail"><i class="far fa-envelope"></i></a>
-                <a href="tel:0797880803"><i class="fas fa-phone"></i></a>
-                <a href="https://linkedin.com/in/quynhtran0308/"><i class="fab fa-linkedin-in"></i></a>
+                <a href="mailto:lekha3604@gmail" target="_blank"><i class="far fa-envelope"></i></a>
+                <a href="tel:0797880803" target="_blank"><i class="fas fa-phone"></i></a>
+                <a href="https://linkedin.com/in/quynhtran0308/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
               </div>
             </div>
           </div> 
