--- a/detail/Pro3.html
+++ b/detail/Pro3.html
@@ -51,8 +51,8 @@
                 </strong>
             </p>
             <div class="banner__socials">
-              <a href="https://www.facebook.com/marketingonair.mgc/posts/pfbid0X87Dh8cC7Genprh1fBHvXfZpcXDSN1Y48UBs7HVDQw6RoxUCcjk7bRFZJX5BY46Nl"><i class="fab fa-facebook"></i></a>
-              <a href="https://drive.google.com/file/d/1DvZ1Q3XA6SckW3fn7G9b_PsezauIDrke/view?usp=drive_link"><i class="fab fa-google-drive"></i></a>
+              <a href="https://www.facebook.com/marketingonair.mgc/posts/pfbid0X87Dh8cC7Genprh1fBHvXfZpcXDSN1Y48UBs7HVDQw6RoxUCcjk7bRFZJX5BY46Nl" target="_blank"><i class="fab fa-facebook"></i></a>
+              <a href="https://drive.google.com/file/d/1DvZ1Q3XA6SckW3fn7G9b_PsezauIDrke/view?usp=drive_link" target="_blank"><i class="fab fa-google-drive"></i></a>
             </div>
           </div> 
         </div>
@@ -74,7 +74,7 @@
         <!-- item 1 -->
         <div class="things__item">
           <!-- img -->
-          <img src="./img/things-item-1.png" alt="illustration of women" />
+          <img src="./img/Pro/pro3/things_1.png" alt="illustration of women" />
           <!-- text -->
           <div class="things__item--heading">
             <h3><strong>Contribution</strong></h3>
@@ -87,7 +87,7 @@
         <!-- item 2 -->
         <div class="things__item">
           <!-- img -->
-          <img src="./img/things-item-2.png" alt="illustration of women" />
+          <img src="./img/Pro/pro3/things_2.png" alt="illustration of women" />
           <!-- text -->
           <div class="things__item--heading">
             <h3><strong>What I learned from this job position</strong></h3>
@@ -115,7 +115,7 @@
           <img src="./img/work-dec.png" alt="illustration of leaf" />
         </div>
         <!-- heading -->
-        <h2>SOME SLIDES FROM THE MARKETING PROPOSAL:</h2>
+        <h2>SOME SLIDES FROM THE MARKETING PROPOSAL</h2>
         <!-- img -->
         <div class="works__img">
           <div class="works__img--single">
@@ -174,9 +174,9 @@
                   </div>
               </form>
               <div class="banner__socials1">
-                <a href="mailto:lekha3604@gmail"><i class="far fa-envelope"></i></a>
-                <a href="tel:0797880803"><i class="fas fa-phone"></i></a>
-                <a href="https://linkedin.com/in/quynhtran0308/"><i class="fab fa-linkedin-in"></i></a>
+                <a href="mailto:lekha3604@gmail" target="_blank"><i class="far fa-envelope"></i></a>
+                <a href="tel:0797880803" target="_blank"><i class="fas fa-phone"></i></a>
+                <a href="https://linkedin.com/in/quynhtran0308/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
               </div>
             </div>
           </div> 
