--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     My unwavering passion for learning and determination is evident in my eagerness to take on challenges, fostering personal and professional growth.
                 </p>
                 <div class="btn-con">
-                    <a href="https://drive.google.com/file/d/1Ly33_IaCCKBQrRFEY8gfKRZQ9-GGVq_9/view?usp=sharing" class="main-btn">
+                    <a href="https://drive.google.com/file/d/1Ly33_IaCCKBQrRFEY8gfKRZQ9-GGVq_9/view?usp=sharing" target="_blank" class="main-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -59,18 +59,19 @@
                         pursuing a career in marketing. I have actively participated
                         in various marketing competitions and projects to enhance
                         my skills and practical knowledge.
+                        <br>This is my blog, where I share my thoughts and perspectives on all aspects of life.
                     </p>
                     <div class="btn-con">
-                        <a href="https://drive.google.com/file/d/1Ly33_IaCCKBQrRFEY8gfKRZQ9-GGVq_9/view?usp=sharing" class="main-btn">
-                            <span class="btn-text">Download CV</span>
-                            <span class="btn-icon"><i class="fas fa-download"></i></span>
+                        <a href="https://www.facebook.com/profile.php?id=61555853646212" target="_blank" class="main-btn">
+                            <span class="btn-text">My Blog</span>
+                            <span class="btn-icon"><i class="fas fa-blog"></i></span>
                         </a>
                     </div>
                 </div>
                 <div class="right-about">
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">5+</p>
+                            <p class="large-text">4+</p>
                             <p class="small-text">Projects <br /> Completed</p>
                         </div>
                     </div>
@@ -189,7 +190,7 @@
                         <i class="fas fa-certificate"></i>
                     </div>
                     <h5>TOEIC - 880 POINT</h5>
-                    <a href="https://drive.google.com/file/d/19YcArLCBNp0MCuOdbNPxc4QJsWSmo6ac/view?usp=drive_link">
+                    <a href="https://drive.google.com/file/d/19YcArLCBNp0MCuOdbNPxc4QJsWSmo6ac/view?usp=drive_link" target="_blank">
                         <p>Click on to see it</p>
                     </a>                 
                 </div>
@@ -198,7 +199,7 @@
                         <i class="fas fa-certificate"></i>
                     </div>
                     <h5>IC3 - CHỨNG CHỈ TIN HỌC VĂN PHÒNG</h5>
-                    <a href="https://drive.google.com/file/d/1zeFCClfMNEZHU9roDm3dXMLSs-VQ64ry/view?usp=drive_link">
+                    <a href="https://drive.google.com/file/d/1zeFCClfMNEZHU9roDm3dXMLSs-VQ64ry/view?usp=drive_link" target="_blank">
                         <p>Click on to see it</p>
                     </a> 
                 </div>
@@ -207,7 +208,7 @@
                         <i class="fas fa-certificate"></i>
                     </div>
                     <h5>THE FUNDAMENTALS OF DIGITAL MARKETING BY GOOGLE</h5>
-                    <a href="https://drive.google.com/file/d/1_dhWpG1GSVzR_hnMpIAn4yOUQkdj_FnV/view?usp=drive_link">
+                    <a href="https://drive.google.com/file/d/1_dhWpG1GSVzR_hnMpIAn4yOUQkdj_FnV/view?usp=drive_link" target="_blank">
                         <p>Click on to see it</p>
                     </a> 
                 </div>
@@ -216,7 +217,7 @@
                         <i class="fas fa-certificate"></i>
                     </div>
                     <h5>SEO FROM HUBSPOT ACADEMY</h5>
-                    <a href="https://drive.google.com/file/d/16HfQoZH6wAH3nybBgIvZZqH-VVrxTgYg/view?usp=drive_link">
+                    <a href="https://drive.google.com/file/d/16HfQoZH6wAH3nybBgIvZZqH-VVrxTgYg/view?usp=drive_link" target="_blank">
                         <p>Click on to see it</p>
                     </a> 
                 </div>
@@ -225,7 +226,7 @@
                         <i class="fas fa-certificate"></i>
                     </div>
                     <h5>iVOLUNTEER VIETNAM AMBASSADOR</h5>
-                    <a href="https://drive.google.com/file/d/1sG12rPuDaEqPUK0oFMKa8FrJfc-59GDm/view?usp=drive_link">
+                    <a href="https://drive.google.com/file/d/1sG12rPuDaEqPUK0oFMKa8FrJfc-59GDm/view?usp=drive_link" target="_blank">
                         <p>Click on to see it</p>
                     </a> 
                 </div>
@@ -234,7 +235,7 @@
                         <i class="fas fa-certificate"></i>
                     </div>
                     <h5>CREATECH MARKETERS</h5>
-                    <a href="https://drive.google.com/file/d/1-hMVeLMggTVb9Cl2Een88W_rcqoCeOs4/view?usp=drive_link">
+                    <a href="https://drive.google.com/file/d/1-hMVeLMggTVb9Cl2Een88W_rcqoCeOs4/view?usp=drive_link" target="_blank">
                         <p>Click on to see it</p>
                     </a> 
                 </div>
@@ -243,7 +244,7 @@
                         <i class="fas fa-certificate"></i>
                     </div>
                     <h5>STRATEGIES FOR PERSONAL GROWTH AND DEVELOPMENT</h5>
-                    <a href="https://drive.google.com/file/d/1T2scqCIaXDrd2xFoHCKG2V3i12wlPptI/view?usp=drive_link">
+                    <a href="https://drive.google.com/file/d/1T2scqCIaXDrd2xFoHCKG2V3i12wlPptI/view?usp=drive_link" target="_blank">
                         <p>Click on to see it</p>
                     </a> 
                 </div>
@@ -252,7 +253,7 @@
                         <i class="fas fa-certificate"></i>
                     </div>
                     <h5>KỸ NĂNG LẮNG NGHE TÍCH CỰC BY UEH</h5>
-                    <a href="https://drive.google.com/file/d/1BvxUHJhKLvoTe1CM16hwYfHJUN7Pfjle/view?usp=drive_link">
+                    <a href="https://drive.google.com/file/d/1BvxUHJhKLvoTe1CM16hwYfHJUN7Pfjle/view?usp=drive_link" target="_blank">
                         <p>Click on to see it</p>
                     </a> 
                 </div>
@@ -261,7 +262,7 @@
                         <i class="fas fa-certificate"></i>
                     </div>
                     <h5>TÌNH NGUYỆN VUI HỘI TRĂNG RẰM</h5>
-                    <a href="https://drive.google.com/file/d/1ppIooeLn1YIkD_6ewf3WOEJaEEBS7CW9/view?usp=drive_link">
+                    <a href="https://drive.google.com/file/d/1ppIooeLn1YIkD_6ewf3WOEJaEEBS7CW9/view?usp=drive_link" target="_blank">
                         <p>Click on to see it</p>
                     </a> 
                 </div>
@@ -270,7 +271,7 @@
                         <i class="fas fa-certificate"></i>
                     </div>
                     <h5>SÀI GÒN, ĂN TỐI NHA</h5>
-                    <a href="https://drive.google.com/file/d/1H0qdzDQe_MwNUPrzsmIuAaWMEDpD6wS7/view?usp=drive_link">
+                    <a href="https://drive.google.com/file/d/1H0qdzDQe_MwNUPrzsmIuAaWMEDpD6wS7/view?usp=drive_link" target="_blank">
                         <p>Click on to see it</p>
                     </a> 
                 </div>
@@ -291,10 +292,10 @@
                     <div class="hover-items">
                         <h3>Xanh Yen Staycation</h3>
                         <div class="icons">
-                            <a href="./detail/Exper1.html" class="icon" >
+                            <a href="./detail/Exper1.html" class="icon">
                                 <i class="fas fa-info"></i>
                             </a>
-                            <a href="https://www.tiktok.com/@xanhyen.staycation?is_from_webapp=1&sender_device=pc" class="icon">
+                            <a href="https://www.tiktok.com/@xanhyen.staycation?is_from_webapp=1&sender_device=pc" class="icon" target="_blank">
                                 <i class="fab fa-tiktok"></i>
                             </a>
                         </div>
@@ -310,7 +311,7 @@
                             <a href="./detail/Exper2.html" class="icon">
                                 <i class="fas fa-info"></i>
                             </a>
-                            <a href="https://www.tiktok.com/@ivolunteervietnam.com?is_from_webapp=1&sender_device=pc" class="icon">
+                            <a href="https://www.tiktok.com/@ivolunteervietnam.com?is_from_webapp=1&sender_device=pc" class="icon" target="_blank">
                                 <i class="fab fa-tiktok"></i>
                             </a>
                         </div>
@@ -326,7 +327,7 @@
                             <a href="./detail/Exper3.html" class="icon">
                                 <i class="fas fa-info"></i>
                             </a>
-                            <a href="https://saigoncity.com.vn/" class="icon">
+                            <a href="https://saigoncity.com.vn/" class="icon" target="_blank">
                                 <i class="fab fa-edge"></i>
                             </a>
                         </div>
@@ -342,8 +343,8 @@
                             <a href="./detail/Exper4.html" class="icon">
                                 <i class="fas fa-info"></i>
                             </a>
-                            <a href="https://www.facebook.com/margroup.ueh" class="icon">
-                                <i class="fab fa-facebook"></i>
+                            <a href="https://margroup.edu.vn/" class="icon" target="_blank">
+                                <i class="fab fa-edge"></i>
                             </a>
                         </div>
                     </div>
@@ -394,7 +395,7 @@
                         </a>
                     </div>
                     <div class="blog">
-                        <a href="./detail/Pro4.html"><img src="./detail/img/Pro/pro4/elsa.jpg" alt=""></a>
+                        <a href="./detail/Pro4.html"><img src="./detail/img/Pro/pro4/elsa.jpg" alt="">
                         <div class="blog-text">
                             <h4>
                                 ELSA
@@ -403,18 +404,7 @@
                                 ELSA Speak is a revolutionary new app that uses artificial intelligence to help you learn English pronunciation in a fun and engaging way. ELSA Speak uses a variety of techniques to help people improve their pronunciation, including personalized feedback, a comprehensive vocabulary, and a variety of exercises. 
                             </p>
                         </div>
-                    </div>
-                    <div class="blog">
-                        <a href="./detail/Pro5.html"><img src="./img/blog3.jpg" alt=""></a>
-                        <div class="blog-text">
-                            <h4>
-                                BLOG
-                            </h4>
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
-                            </p>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -497,38 +487,38 @@
                         <div class="contact-info">
                             <div class="contact-item">
                                 <div class="icon">
-                                    <a href="https://maps.app.goo.gl/aFaXgBBLsB9WuezQ7"><i class="fas fa-map-marker-alt"></i></a>
-                                    <a href="https://maps.app.goo.gl/aFaXgBBLsB9WuezQ7"><span>Location</span></a>
+                                    <a href="https://maps.app.goo.gl/aFaXgBBLsB9WuezQ7" target="_blank"><i class="fas fa-map-marker-alt"></i></a>
+                                    <a href="https://maps.app.goo.gl/aFaXgBBLsB9WuezQ7" target="_blank"><span>Location</span></a>
                                 </div>
                                 <p>
-                                    <a href="https://maps.app.goo.gl/aFaXgBBLsB9WuezQ7"><span>District 1 HCM City, Vietnam</span></a>
+                                    <a href="https://maps.app.goo.gl/aFaXgBBLsB9WuezQ7" target="_blank"><span>District 1 HCM City, Vietnam</span></a>
                                 </p>
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
-                                    <a href="mailto:quynhnt0103@gmail.com"><i class="fas fa-envelope"></i></a>
-                                    <a href="mailto:quynhnt0103@gmail.com"><span>Email</span></a>
+                                    <a href="mailto:quynhnt0103@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+                                    <a href="mailto:quynhnt0103@gmail.com" target="_blank"><span>Email</span></a>
                                 </div>
                                 <p>
-                                    <a href="mailto:quynhnt0103@gmail.com"><span> quynhnt0103@gmail.com</span></a>
+                                    <a href="mailto:quynhnt0103@gmail.com" target="_blank"><span> quynhnt0103@gmail.com</span></a>
                                 </p>
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
-                                    <a href="https://www.linkedin.com/in/quynhtran0308/"><i class="fab fa-linkedin"></i></a>
-                                    <a href="https://www.linkedin.com/in/quynhtran0308/"><span>LinkedIn</span></a>
+                                    <a href="https://www.linkedin.com/in/quynhtran0308/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                                    <a href="https://www.linkedin.com/in/quynhtran0308/" target="_blank"><span>LinkedIn</span></a>
                                 </div>
                                 <p>
-                                    <a href="https://www.linkedin.com/in/quynhtran0308/"><span> linkedin.com/in/quynhtran0308/</span></a>
+                                    <a href="https://www.linkedin.com/in/quynhtran0308/" target="_blank"><span> linkedin.com/in/quynhtran0308/</span></a>
                                 </p>
                             </div>
                             <div class="contact-item">
                                 <div class="icon">
-                                    <a href="tel:0797880803"><i class="fas fa-mobile-alt"></i></a>
-                                    <a href="tel:0797880803"><span>Mobile Number</span></a>
+                                    <a href="tel:0797880803" target="_blank"><i class="fas fa-mobile-alt"></i></a>
+                                    <a href="tel:0797880803" target="_blank"><span>Mobile Number</span></a>
                                 </div>
                                 <p>
-                                    <a href="tel:0797880803"><span> 0797880803</span></a>
+                                    <a href="tel:0797880803" target="_blank"><span> 0797880803</span></a>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -562,7 +552,7 @@
                                     </button>
                                 </div>
                                 <div class="submit1-btn">
-                                    <a href="https://drive.google.com/file/d/1Ly33_IaCCKBQrRFEY8gfKRZQ9-GGVq_9/view?usp=sharing" class="main-btn">
+                                    <a href="https://drive.google.com/file/d/1Ly33_IaCCKBQrRFEY8gfKRZQ9-GGVq_9/view?usp=sharing" target="_blank" class="main-btn">
                                         <span class="btn-text">Download CV </span>
                                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                                     </a>
@@ -578,15 +568,15 @@
     <div class="controls">
         <div class="control active-btn" data-id="home">
             <i class="fas fa-home"></i>
-            <p><strong>Home</strong></p>
+            <p><strong>Introduce</strong></p>
         </div>
         <div class="control" data-id="about">
             <i class="fas fa-user"></i>
-            <p><strong>About me</strong></p>
+            <p><strong>About</strong></p>
 
         </div>
         <div class="control" data-id="portfolio">
-            <i class="fas fa-tasks"></i>
+            <i class="fas fa-briefcase"></i>
             <p><strong>Experience</strong></p>
 
         </div>
@@ -596,7 +586,7 @@
 
         </div>
         <div class="control" data-id="blogs1">
-            <i class="fas fa-briefcase"></i>
+            <i class="fas fa-book"></i>
             <p><strong>Education</strong></p>
 
         </div>
