--- a/detail/Edu1.html
+++ b/detail/Edu1.html
@@ -51,7 +51,7 @@
                 </strong>
             </p>
             <div class="banner__socials">
-              <a href="https://drive.google.com/file/d/1ZO5o0HYeSQn6skBtVa36cIad_BTS6fjD/view?usp=drive_link"><i class="fab fa-google-drive"></i></a>
+              <a href="https://drive.google.com/file/d/1ZO5o0HYeSQn6skBtVa36cIad_BTS6fjD/view?usp=drive_link" target="_blank"><i class="fab fa-google-drive"></i></a>
             </div>
           </div> 
         </div>
@@ -98,9 +98,9 @@
                   </div>
               </form>
               <div class="banner__socials1">
-                <a href="mailto:lekha3604@gmail"><i class="far fa-envelope"></i></a>
-                <a href="tel:0797880803"><i class="fas fa-phone"></i></a>
-                <a href="https://linkedin.com/in/quynhtran0308/"><i class="fab fa-linkedin-in"></i></a>
+                <a href="mailto:lekha3604@gmail" target="_blank"><i class="far fa-envelope"></i></a>
+                <a href="tel:0797880803" target="_blank"><i class="fas fa-phone"></i></a>
+                <a href="https://linkedin.com/in/quynhtran0308/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
               </div>
             </div>
           </div> 
