--- a/detail/Exper2.html
+++ b/detail/Exper2.html
@@ -51,9 +51,9 @@
                 beneficial community, enriching the lives of Vietnamese students with positive values and opportunities. </strong>
             </p>
             <div class="banner__socials">
-              <a href="https://www.facebook.com/iVolunteerVietnam"><i class="fab fa-facebook"></i></a>
-              <a href="https://www.tiktok.com/@ivolunteervietnam.com?is_from_webapp=1&sender_device=pc"><i class="fab fa-tiktok"></i></a>
-              <a href="https://www.instagram.com/ivolunteervietnam?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fab fa-instagram"></i></a>
+              <a href="https://www.facebook.com/iVolunteerVietnam" target="_blank"><i class="fab fa-facebook"></i></a>
+              <a href="https://www.tiktok.com/@ivolunteervietnam.com?is_from_webapp=1&sender_device=pc" target="_blank"><i class="fab fa-tiktok"></i></a>
+              <a href="https://www.instagram.com/ivolunteervietnam?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
           </div> 
         </div>
@@ -75,7 +75,7 @@
         <!-- item 1 -->
         <div class="things__item">
           <!-- img -->
-          <img src="./img/things-item-1.png" alt="illustration of women" />
+          <img src="./img/Exper/iV/things_1.png" alt="illustration of women" />
           <!-- text -->
           <div class="things__item--heading">
             <h3><strong>Contribution</strong></h3>
@@ -88,7 +88,7 @@
         <!-- item 2 -->
         <div class="things__item">
           <!-- img -->
-          <img src="./img/things-item-2.png" alt="illustration of women" />
+          <img src="./img/Exper/iV/things_2.png" alt="illustration of women" />
           <!-- text -->
           <div class="things__item--heading">
             <h3><strong>Achievement</strong></h3>
@@ -101,7 +101,7 @@
         <!-- item 3 -->
         <div class="things__item">
           <!-- img -->
-          <img src="./img/things-item-3.png" alt="illustration of computer" />
+          <img src="./img/Exper/iV/things_3.png" alt="illustration of computer" />
           <!-- text -->
           <div class="things__item--heading">
             <h3><strong>What I learned from this job position</strong></h3>
@@ -124,36 +124,31 @@
           <img src="./img/work-dec.png" alt="illustration of leaf" />
         </div>
         <!-- heading -->
-        <h2>HERE ARE SOME ARTICLES I POSTED FOR IVOLUNTEER VIETNAM:</h2>
+        <h2>HERE ARE SOME ARTICLES I POSTED FOR IVOLUNTEER VIETNAM</h2>
         <!-- img -->
         <div class="works__img">
           <div class="works__img--single">
-            <a href="https://www.facebook.com/quinnee03/posts/pfbid02mYscy3ZvKpA8wKkS8ExkgrDXZHtSoBPmY1PsFjFC9XYTKFbi1AZQCbyCKnTTbNmQl">
+            <a href="https://www.facebook.com/quinnee03/posts/pfbid02mYscy3ZvKpA8wKkS8ExkgrDXZHtSoBPmY1PsFjFC9XYTKFbi1AZQCbyCKnTTbNmQl" target="_blank">
               <img src="./img/Exper/iV/Du học Tokyo.png" alt="bag" />
             </a>
           </div>
           <div class="works__img--single">
-            <a href="https://www.facebook.com/groups/ivolunteervietnamcom/posts/598261202330684">
-            <img src="./img/Exper/iV/Khoá học KNM mp.PNG" alt="plate" />
-            </a>
-          </div>
-          <div class="works__img--single">
-            <a href="https://www.facebook.com/groups/ivolunteervietnamcom/posts/601819461974858">
+            <a href="https://www.facebook.com/groups/ivolunteervietnamcom/posts/601819461974858" target="_blank">
             <img src="./img/Exper/iV/khoá học tiếng trung.PNG" alt="women" />
             </a>
           </div>
           <div class="works__img--single">
-            <a href="https://www.facebook.com/quinnee03/posts/pfbid0JAas1SVk5ndSFVtgipVSBGeRbDcMAz7Rs43RRQsaKv4oS4bgsNw9huvkJ5MbDqZWl">
+            <a href="https://www.facebook.com/quinnee03/posts/pfbid0JAas1SVk5ndSFVtgipVSBGeRbDcMAz7Rs43RRQsaKv4oS4bgsNw9huvkJ5MbDqZWl" target="_blank">
             <img src="./img/Exper/iV/review khóa học.png" alt="piggy bank" />
             </a>
           </div>  
           <div class="works__img--single">
-            <a href="https://www.facebook.com/quinnee03/posts/pfbid02svzBHtN8a1Sn8nvhWBpfwQL6c6nGE1uZxXomAKBF2ZU6eurLtuuXpK4JqhHY5Nq6l">
+            <a href="https://www.facebook.com/quinnee03/posts/pfbid02svzBHtN8a1Sn8nvhWBpfwQL6c6nGE1uZxXomAKBF2ZU6eurLtuuXpK4JqhHY5Nq6l" target="_blank">
             <img src="./img/Exper/iV/TH tình nguyện.png" alt="piggy bank" />
             </a>
           </div> 
           <div class="works__img--single">
-            <a href="https://www.facebook.com/quinnee03/posts/pfbid0cgc2F94TuR5FouMLTmhAKhADLoKfqYwaEh3MF7jpqw5NUTVnBbvZaLC3jzbe3m3Ll">
+            <a href="https://www.facebook.com/quinnee03/posts/pfbid0cgc2F94TuR5FouMLTmhAKhADLoKfqYwaEh3MF7jpqw5NUTVnBbvZaLC3jzbe3m3Ll" target="_blank">
             <img src="./img/Exper/iV/Tuyển TV gen.png" alt="piggy bank" />
             </a>
           </div> 
@@ -188,9 +183,9 @@
                   </div>
               </form>
               <div class="banner__socials1">
-                <a href="mailto:lekha3604@gmail"><i class="far fa-envelope"></i></a>
-                <a href="tel:0797880803"><i class="fas fa-phone"></i></a>
-                <a href="https://linkedin.com/in/quynhtran0308/"><i class="fab fa-linkedin-in"></i></a>
+                <a href="mailto:lekha3604@gmail" target="_blank"><i class="far fa-envelope"></i></a>
+                <a href="tel:0797880803" target="_blank"><i class="fas fa-phone"></i></a>
+                <a href="https://linkedin.com/in/quynhtran0308/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
               </div>
             </div>
           </div> 
