--- a/detail/Pro2.html
+++ b/detail/Pro2.html
@@ -52,8 +52,8 @@
                 </strong>
             </p>
             <div class="banner__socials">
-              <a href="https://www.facebook.com/story.php?story_fbid=213140904815072&id=100083574901976"><i class="fab fa-facebook"></i></a>
-              <a href="https://drive.google.com/file/d/1NyrEx8YbDrzapQ_L1qfg6RpZsxgSuPrx/view"><i class="fab fa-google-drive"></i></a>
+              <a href="https://www.facebook.com/story.php?story_fbid=213140904815072&id=100083574901976" target="_blank"><i class="fab fa-facebook"></i></a>
+              <a href="https://drive.google.com/file/d/1NyrEx8YbDrzapQ_L1qfg6RpZsxgSuPrx/view" target="_blank"><i class="fab fa-google-drive"></i></a>
             </div>
           </div> 
         </div>
@@ -75,7 +75,7 @@
         <!-- item 1 -->
         <div class="things__item">
           <!-- img -->
-          <img src="./img/things-item-1.png" alt="illustration of women" />
+          <img src="./img/Pro/pro2/things_1.jpg" alt="illustration of women" />
           <!-- text -->
           <div class="things__item--heading">
             <h3><strong>Contribution</strong></h3>
@@ -89,7 +89,7 @@
         <!-- item 2 -->
         <div class="things__item">
           <!-- img -->
-          <img src="./img/things-item-2.png" alt="illustration of women" />
+          <img src="./img/Pro/pro2/things_2.jpg" alt="illustration of women" />
           <!-- text -->
           <div class="things__item--heading">
             <h3><strong>What I learned from this job position</strong></h3>
@@ -118,7 +118,7 @@
           <img src="./img/work-dec.png" alt="illustration of leaf" />
         </div>
         <!-- heading -->
-        <h2>SOME SLIDES FROM THE MARKETING PROPOSAL:</h2>
+        <h2>SOME SLIDES FROM THE MARKETING PROPOSAL</h2>
         <!-- img -->
         <div class="works__img">
           <div class="works__img--single">
@@ -142,8 +142,8 @@
             </a>
           </div>
           <div class="works__img--single">
-            <a href="./img/Pro/pro2/347384623_162926373377060_2331532450585501200_n.jpg">
-            <img src="./img/Pro/pro2/347384623_162926373377060_2331532450585501200_n.jpg" alt="piggy bank" />
+            <a href="./img/Pro/pro2/Screenshot 2024-01-28 113858.png">
+            <img src="./img/Pro/pro2/Screenshot 2024-01-28 113858.png" alt="piggy bank" />
             </a>
           </div>
         </div>
@@ -177,9 +177,9 @@
                   </div>
               </form>
               <div class="banner__socials1">
-                <a href="mailto:lekha3604@gmail"><i class="far fa-envelope"></i></a>
-                <a href="tel:0797880803"><i class="fas fa-phone"></i></a>
-                <a href="https://linkedin.com/in/quynhtran0308/"><i class="fab fa-linkedin-in"></i></a>
+                <a href="mailto:lekha3604@gmail" target="_blank"><i class="far fa-envelope"></i></a>
+                <a href="tel:0797880803" target="_blank"><i class="fas fa-phone"></i></a>
+                <a href="https://linkedin.com/in/quynhtran0308/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
               </div>
             </div>
           </div> 
