--- a/detail/Pro4.html
+++ b/detail/Pro4.html
@@ -50,7 +50,7 @@
                 </strong>
             </p>
             <div class="banner__socials">
-              <a href="https://drive.google.com/drive/u/0/folders/1WGoRoFwVb-mYcsuxoP1F1NyttXBhADw7"><i class="fab fa-google-drive"></i></a>
+              <a href="https://drive.google.com/drive/u/0/folders/1WGoRoFwVb-mYcsuxoP1F1NyttXBhADw7" target="_blank"><i class="fab fa-google-drive"></i></a>
             </div>
           </div> 
         </div>
@@ -72,7 +72,7 @@
         <!-- item 1 -->
         <div class="things__item">
           <!-- img -->
-          <img src="./img/things-item-1.png" alt="illustration of women" />
+          <img src="./img/Pro/pro4/things_1.png" alt="illustration of women" />
           <!-- text -->
           <div class="things__item--heading">
             <h3><strong>Contribution</strong></h3>
@@ -91,7 +91,7 @@
         <!-- item 2 -->
         <div class="things__item">
           <!-- img -->
-          <img src="./img/things-item-2.png" alt="illustration of women" />
+          <img src="./img/Pro/pro4/things_2.png" alt="illustration of women" />
           <!-- text -->
           <div class="things__item--heading">
             <h3><strong>What I learned from this job position</strong></h3>
@@ -118,7 +118,7 @@
           <img src="./img/work-dec.png" alt="illustration of leaf" />
         </div>
         <!-- heading -->
-        <h2>SOME SLIDES FROM THE MARKETING PROPOSAL:</h2>
+        <h2>SOME SLIDES FROM THE MARKETING PROPOSAL</h2>
         <!-- img -->
         <div class="works__img">
           <div class="works__img--single">
@@ -177,9 +177,9 @@
                   </div>
               </form>
               <div class="banner__socials1">
-                <a href="mailto:lekha3604@gmail"><i class="far fa-envelope"></i></a>
-                <a href="tel:0797880803"><i class="fas fa-phone"></i></a>
-                <a href="https://linkedin.com/in/quynhtran0308/"><i class="fab fa-linkedin-in"></i></a>
+                <a href="mailto:lekha3604@gmail" target="_blank"><i class="far fa-envelope"></i></a>
+                <a href="tel:0797880803" target="_blank"><i class="fas fa-phone"></i></a>
+                <a href="https://linkedin.com/in/quynhtran0308/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
               </div>
             </div>
           </div> 
