--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                                     <a href="https://maps.app.goo.gl/aFaXgBBLsB9WuezQ7" target="_blank"><span>Location</span></a>
                                 </div>
                                 <p>
-                                    <a href="https://maps.app.goo.gl/aFaXgBBLsB9WuezQ7" target="_blank"><span>District 1 HCM City, Vietnam</span></a>
+                                    <a href="https://maps.app.goo.gl/aFaXgBBLsB9WuezQ7" target="_blank"><span>District 1 HCMC, Vietnam</span></a>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -509,7 +509,7 @@
                                     <a href="https://www.linkedin.com/in/quynhtran0308/" target="_blank"><span>LinkedIn</span></a>
                                 </div>
                                 <p>
-                                    <a href="https://www.linkedin.com/in/quynhtran0308/" target="_blank"><span> linkedin.com/in/quynhtran0308/</span></a>
+                                    <a href="https://www.linkedin.com/in/quynhtran0308/" target="_blank"><span> /in/quynhtran0308/</span></a>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -572,7 +572,7 @@
         </div>
         <div class="control" data-id="about">
             <i class="fas fa-user"></i>
-            <p><strong>About</strong></p>
+            <p><strong>About me</strong></p>
 
         </div>
         <div class="control" data-id="portfolio">
