--- a/index.html
+++ b/index.html
@@ -572,8 +572,7 @@
         </div>
         <div class="control" data-id="about">
             <i class="fas fa-user"></i>
-            <p><strong>About me</strong></p>
-
+            <p><strong>Profile</strong></p>
         </div>
         <div class="control" data-id="portfolio">
             <i class="fas fa-briefcase"></i>
