--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     My unwavering passion for learning and determination is evident in my eagerness to take on challenges, fostering personal and professional growth.
                 </p>
                 <div class="btn-con">
-                    <a href="https://drive.google.com/file/d/1Ly33_IaCCKBQrRFEY8gfKRZQ9-GGVq_9/view?usp=sharing" target="_blank" class="main-btn">
+                    <a href="https://drive.google.com/file/d/1Ly33_IaCCKBQrRFEY8gfKRZQ9-GGVq_9/view" target="_blank" class="main-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -552,7 +552,7 @@
                                     </button>
                                 </div>
                                 <div class="submit1-btn">
-                                    <a href="https://drive.google.com/file/d/1Ly33_IaCCKBQrRFEY8gfKRZQ9-GGVq_9/view?usp=sharing" target="_blank" class="main-btn">
+                                    <a href="https://drive.google.com/file/d/1Ly33_IaCCKBQrRFEY8gfKRZQ9-GGVq_9/view" target="_blank" class="main-btn">
                                         <span class="btn-text">Download CV </span>
                                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                                     </a>
@@ -577,22 +577,18 @@
         <div class="control" data-id="portfolio">
             <i class="fas fa-briefcase"></i>
             <p><strong>Experience</strong></p>
-
         </div>
         <div class="control" data-id="blogs">
             <i class="far fa-newspaper"></i>
             <p><strong>Project</strong></p>
-
         </div>
         <div class="control" data-id="blogs1">
             <i class="fas fa-book"></i>
             <p><strong>Education</strong></p>
-
         </div>
         <div class="control" data-id="contact">
             <i class="fas fa-envelope-open"></i>
             <p><strong>Contact</strong></p>
-
         </div>
     </div>
     <div class="theme-btn">
